speed test result and user activation added

--- a/admin-index.html
+++ b/admin-index.html
@@ -274,7 +274,12 @@
                     <span class="nav-text">Calender</span>
                   </a>
                 </li>
-
+                <li class="bold">
+                  <a href="activate-user.html" class="waves-effect waves-cyan">
+                    <i class="fas fa-users"></i>
+                    <span class="nav-text">Activate Users</span>
+                  </a>
+                </li>
                 <li class="bold">
                   <a class="collapsible-header  waves-effect waves-cyan">
                   <i class="fas fa-angle-down"></i>
